add jwt spring security configurations

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,24 +1,22 @@
-#spring.datasource.url=jdbc:postgresql://localhost:5432/codegen
-#spring.datasource.username=impavliuchenko
-#
-#spring.jpa.database=postgresql
-#
-#spring.jpa.show-sql=true
-#
-##spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
-#spring.jpa.properties.hibernate.format-sql=true
-#
-##spring.data.rest.basePath=/api/admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/codegen
+spring.datasource.username=impavliuchenko
+spring.jpa.database=postgresql
+spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
+spring.jpa.properties.hibernate.format-sql=true
+
+#spring.data.rest.basePath=/api/admin
 
 #-------------------------------------------------------------------------------------#
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.jpa.database=postgresql
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
+#spring.jpa.properties.hibernate.format-sql=true
 
-spring.jpa.database=postgresql
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
-spring.jpa.properties.hibernate.format-sql=true
+#-------------------------------------------------------------------------------------#
